[gd_scene load_steps=7 format=3 uid="uid://dt4k8urekf1ax"]

[ext_resource type="Script" path="res://scripts/ui/pause menu.gd" id="1_yder4"]
[ext_resource type="Texture2D" uid="uid://dpt3aaseuu0hx" path="res://assets/textures/FX/bubble-mini.png" id="2_10tps"]
[ext_resource type="FontFile" uid="uid://bvt2lwacyhmkq" path="res://scenes/ui/Crush Bubble.otf" id="3_n1a7x"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ic2fq"]
texture = ExtResource("2_10tps")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dhqgu"]
bg_color = Color(0.494118, 0.670588, 0.768627, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jx2cm"]
bg_color = Color(0.494118, 0.670588, 0.768627, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Pause menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yder4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 600.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ic2fq")

[node name="Resume" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -96.0
offset_right = 35.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_n1a7x")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_dhqgu")
theme_override_styles/normal = SubResource("StyleBoxFlat_jx2cm")
text = "Resume"

[node name="Options" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_n1a7x")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_dhqgu")
theme_override_styles/normal = SubResource("StyleBoxFlat_jx2cm")
text = "Options"

[node name="Home" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 72.0
offset_right = 35.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_n1a7x")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_dhqgu")
theme_override_styles/normal = SubResource("StyleBoxFlat_jx2cm")
text = "Home"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 269.0
offset_top = 144.0
offset_right = 339.0
offset_bottom = 182.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_n1a7x")
theme_override_font_sizes/font_size = 30
text = "Pause"

[connection signal="pressed" from="Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/Home" to="." method="_on_home_pressed"]
